force-app/main/default/objects/IT_Benefit__c/IT_Benefit__c.object-meta.xml
<CustomObject>
    <label>Benefit</label>
    <nameField>
        <displayFormat>Benefit-{0000}</displayFormat>
        <label>Benefit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>