force-app/main/default/objects/IT_Benefit__c/fields/IT_Acquisition_Channel__c.field-meta.xml
<CustomField>
    <fullName>IT_Acquisition_Channel__c</fullName>
    <formula>IF(  ISPICKVAL(IT_Benefit__c, &#39;Medical Fees&#39; ) , &#39;Marsh&#39; ,  TEXT(IT_Plan__r.IT_Welfare_Project__r.IT_Acquisition_Channel__c))</formula>
    <label>Acquisition Channel</label>
    <type>Text</type>
</CustomField>