force-app/main/default/objects/IT_Benefit__c/fields/IT_Anagraphical_Groups_limited_visib__c.field-meta.xml
<CustomField>
    <fullName>IT_Anagraphical_Groups_limited_visib__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anagraphical Groups limited visibility</label>
    <type>Checkbox</type>
</CustomField>