force-app/main/default/objects/IT_Benefit__c/fields/IT_Benefit_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Benefit_Start_Date__c</fullName>
    <label>From</label>
    <type>Date</type>
</CustomField>