force-app/main/default/objects/IT_Benefit__c/fields/IT_Cash_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Cash_Type__c</fullName>
    <label>Cash Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IT_Benefit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sanint Marsh</fullName>
            </value>
            <value>
                <fullName>Easy Welfare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>