force-app/main/default/objects/IT_Benefit__c/fields/IT_Configuration_Notes__c.field-meta.xml
<CustomField>
    <fullName>IT_Configuration_Notes__c</fullName>
    <inlineHelpText>If specific Benefits, indicate the title and configuration notes</inlineHelpText>
    <label>Configuration Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>