force-app/main/default/objects/IT_Benefit__c/fields/IT_Email__c.field-meta.xml
<CustomField>
    <fullName>IT_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>