force-app/main/default/objects/IT_Benefit__c/fields/IT_Free_Tax__c.field-meta.xml
<CustomField>
    <fullName>IT_Free_Tax__c</fullName>
    <label>Free Tax</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IT_Benefit__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>