force-app/main/default/objects/IT_Benefit__c/fields/IT_Fund_Link_3__c.field-meta.xml
<CustomField>
    <fullName>IT_Fund_Link_3__c</fullName>
    <label>Fund Link 3</label>
    <type>Url</type>
</CustomField>