force-app/main/default/objects/IT_Benefit__c/fields/IT_Fund_Name_1__c.field-meta.xml
<CustomField>
    <fullName>IT_Fund_Name_1__c</fullName>
    <label>Fund Name 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>