force-app/main/default/objects/IT_Benefit__c/fields/IT_Group_Notes__c.field-meta.xml
<CustomField>
    <fullName>IT_Group_Notes__c</fullName>
    <inlineHelpText>Specify group reference visibility!</inlineHelpText>
    <label>Group Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>