force-app/main/default/objects/IT_Benefit__c/fields/IT_Other_Fund_Link__c.field-meta.xml
<CustomField>
    <fullName>IT_Other_Fund_Link__c</fullName>
    <label>Other Fund Link</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>