force-app/main/default/objects/IT_Benefit__c/fields/IT_Other_Fund_Name__c.field-meta.xml
<CustomField>
    <fullName>IT_Other_Fund_Name__c</fullName>
    <label>Other Fund Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>