force-app/main/default/objects/IT_Benefit__c/fields/IT_Periodicity_End_Date_3__c.field-meta.xml
<CustomField>
    <fullName>IT_Periodicity_End_Date_3__c</fullName>
    <label>Periodicity End Date 3</label>
    <type>Date</type>
</CustomField>