force-app/main/default/objects/IT_Benefit__c/fields/IT_Periodicity_Start_Date_1__c.field-meta.xml
<CustomField>
    <fullName>IT_Periodicity_Start_Date_1__c</fullName>
    <label>Periodicity Start Date 1</label>
    <type>Date</type>
</CustomField>