force-app/main/default/objects/IT_Benefit__c/fields/IT_Plan__c.field-meta.xml
<CustomField>
    <fullName>IT_Plan__c</fullName>
    <label>Plan</label>
    <referenceTo>IT_Plan__c</referenceTo>
    <relationshipName>IT_Plan_Component</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>