force-app/main/default/objects/IT_Benefit__c/fields/IT_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IT_Benefit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Already stipulated fund</fullName>
            </value>
            <value>
                <fullName>Company agreement (name and link)</fullName>
            </value>
            <value>
                <fullName>Home to Work</fullName>
            </value>
            <value>
                <fullName>Integrated Home to Work (integration is born by the client)</fullName>
            </value>
            <value>
                <fullName>Stipulated fund and Company agreement (name and link)</fullName>
            </value>
            <value>
                <fullName>Contribution charged to Employee</fullName>
            </value>
            <value>
                <fullName>Contribution charged to Company</fullName>
            </value>
            <value>
                <fullName>Free Amount</fullName>
            </value>
            <value>
                <fullName>Packages</fullName>
            </value>
            <value>
                <fullName>Sanint Marsh or Easy Welfare</fullName>
                <isActive>false</isActive>
                <label>Sanint Marsh or Easy Welfare</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>