force-app/main/default/objects/IT_Benefit__c/validationRules/VRIT01_Benefit_Plan_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT01_Benefit_Plan_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),

OR( IT_Benefit_Start_Date__c  &lt; IT_Plan__r.IT_Plan_Start_Date__c, 
IT_Benefit_End_Date__c  &gt; IT_Plan__r.IT_Plan_End_Date__c ))</errorConditionFormula>
    <errorMessage>Benefit&#39;s dates must be included in Plan&#39;s dates!</errorMessage>
</ValidationRule>