force-app/main/default/objects/IT_Benefit__c/validationRules/VRIT02_Benefit_Start_and_End.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT02_Benefit_Start_and_End</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
IT_Benefit_End_Date__c &lt;  IT_Benefit_Start_Date__c)</errorConditionFormula>
    <errorMessage>Benefit End Date must be after Benefit Start Date!</errorMessage>
</ValidationRule>