force-app/main/default/objects/IT_Benefit__c/validationRules/VRIT03_Periodicity_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT03_Periodicity_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),

OR(

 IT_Periodicity_Start_Date_1__c  &lt;  IT_Benefit_Start_Date__c ,
 IT_Periodicity_Start_Date_2__c  &lt;  IT_Benefit_Start_Date__c ,
 IT_Periodicity_Start_Date_3__c  &lt;  IT_Benefit_Start_Date__c ,

 IT_Periodicity_End_Date_1__c  &gt;  IT_Benefit_End_Date__c ,
 IT_Periodicity_End_Date_2__c  &gt;  IT_Benefit_End_Date__c ,
 IT_Periodicity_End_Date_3__c  &gt;  IT_Benefit_End_Date__c ,

 IT_Periodicity_Start_Date_1__c  &gt;  IT_Benefit_End_Date__c ,
 IT_Periodicity_Start_Date_2__c  &gt;  IT_Benefit_End_Date__c ,
 IT_Periodicity_Start_Date_3__c  &gt;  IT_Benefit_End_Date__c ,

 IT_Periodicity_End_Date_1__c  &lt;  IT_Benefit_Start_Date__c ,
 IT_Periodicity_End_Date_2__c  &lt;  IT_Benefit_Start_Date__c ,
 IT_Periodicity_End_Date_3__c  &lt;  IT_Benefit_Start_Date__c 
 
 

))</errorConditionFormula>
    <errorMessage>Periodicity Start and End Dates must be included in Benefit Start and End Dates!</errorMessage>
</ValidationRule>