force-app/main/default/objects/IT_Benefit__c/validationRules/VRIT04_Fund_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT04_Fund_Name_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),

TEXT(IT_Macro_Benefit__c) = &quot;Fund&quot; ,   
IT_Fund_Name_1__c  = null,
NOT(ISPICKVAL((IT_Type__c), &#39;Already stipulated fund&#39;)
))</errorConditionFormula>
    <errorMessage>Macro Benefit is Fund so insert almost a fund name!</errorMessage>
</ValidationRule>